--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.6.2",
     "tailwindcss": "^4.1.4"
