--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.4",
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "5.7.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.4"
   }
 }
