ci(workflow): change bun.lockb ny bun.lock

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Use Bun Package Manager
         id: use-bun-package-manager
         run: |
-          if [ -f "${{ github.workspace }}/bun.lockb" ]; then
+          if [ -f "${{ github.workspace }}/bun.lock" ]; then
             echo "manager=bun" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=bun run" >> $GITHUB_OUTPUT
             exit 0
           else
-          echo "Bun manager not detected (bun.lockb not found)"
+          echo "Bun manager not detected (bun.lock not found)"
           exit 1
           fi
 
