--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -23,9 +23,19 @@ jobs:
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=bun run" >> $GITHUB_OUTPUT
             exit 0
+          elif [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "command=install" >> $GITHUB_OUTPUT
+            echo "runner=yarn" >> $GITHUB_OUTPUT
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            exit 0
           else
-          echo "Bun manager not detected (bun.lock not found)"
-          exit 1
+            echo "Unable to determine package manager"
+            exit 1
           fi
 
       - name: Setup Bun
@@ -51,4 +61,4 @@ jobs:
 
       - name: Build with Astro
         if: success()
-        run: ${{ steps.detect-package-manager.outputs.manager }} run build
+        run: ${{ steps.detect-package-manager.outputs.runner }} build
