ci(workflow): update bun build

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -61,4 +61,4 @@ jobs:
 
       - name: Build with Astro
         if: success()
-        run: ${{ steps.detect-package-manager.outputs.runner }} build
+        run: bun run build
