--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,4 +1,4 @@
-name: CI Astro Porfolio
+name: CI Astro Portfolio
 
 on:
   push:
@@ -13,6 +13,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
       - name: Use Bun Package Manager
         id: use-bun-package-manager
@@ -30,38 +35,26 @@ jobs:
           elif [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            echo "runner=npm" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine package manager"
             exit 1
           fi
 
-      - name: Debug detected package manager
+      - name: Clean up dependencies
         run: |
-          echo "Detected manager: ${{ steps.use-bun-package-manager.outputs.manager }}"
-
-      - name: Setup Bun
-        if: steps.use-bun-package-manager.outputs.manager == 'bun'
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Setup Bun cache
-        if: steps.use-bun-package-manager.outputs.manager == 'bun'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            .next/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}-
-            ${{ runner.os }}-bun-
+          rm -rf node_modules package-lock.json
+          npm cache clean --force
 
       - name: Install dependencies
         run: ${{ steps.use-bun-package-manager.outputs.manager }} ${{ steps.use-bun-package-manager.outputs.command }}
 
       - name: Build with Astro
         if: success()
-        run: bun run build
+        run: |
+          if [ "${{ steps.use-bun-package-manager.outputs.manager }}" == "bun" ]; then
+            bun run build
+          else
+            npm run build
+          fi
