--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-    "name": "jenner-portfolio",
-    "type": "module",
-    "version": "0.0.1",
-    "scripts": {
-        "dev": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview",
-        "astro": "astro",
-        "format": "prettier --write .",
-        "format:check": "prettier --check ."
-    },
-    "dependencies": {
-        "@astrojs/react": "^4.2.7",
-        "@fontsource-variable/inter": "^5.2.5",
-        "@tailwindcss/vite": "^4.1.6",
-        "astro": "5.7.12",
-        "prettier": "^3.5.3",
-        "prettier-plugin-astro": "^0.14.1",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "tailwindcss": "^4.1.6"
-    }
+  "name": "jenner-portfolio",
+  "type": "module",
+  "version": "0.0.1",
+  "license": "MIT",
+  "scripts": {
+	"dev": "astro dev",
+	"build": "astro build",
+	"preview": "astro preview",
+	"astro": "astro",
+	"format": "prettier --write .",
+	"format:check": "prettier --check ."
+  },
+  "dependencies": {
+	"@astrojs/react": "^4.2.7",
+	"@fontsource-variable/inter": "^5.2.5",
+	"@tailwindcss/vite": "^4.1.6",
+	"astro": "5.7.12",
+	"astro-cloudinary": "^1.3.2",
+	"prettier": "^3.5.3",
+	"prettier-plugin-astro": "^0.14.1",
+	"react": "^19.1.0",
+	"react-dom": "^19.1.0",
+	"tailwindcss": "^4.1.6"
+  }
 }
