--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "5.7.12",
     "astro-cloudinary": "^1.3.2",
     "prettier": "^3.5.3",
