--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "astro": "5.7.12",
     "astro-cloudinary": "^1.3.2",
+    "cloudinary": "^2.6.1",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "react": "^19.1.0",
