--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.7",
+    "@astrojs/react": "4.3.1",
     "@fontsource-variable/inter": "^5.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "5.7.12",
+    "astro": "5.13.7",
     "astro-cloudinary": "^1.3.2",
     "cloudinary": "^2.6.1",
     "prettier": "^3.5.3",
